Implemented command lind utility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,55 @@
-arrow==0.12.1
-asn1crypto==0.24.0
+args==0.1.0
 backcall==0.1.0
 beautifulsoup4==4.6.3
-binaryornot==0.4.4
+bleach==3.0.2
+blessings==1.7
+bs4==0.0.1
 certifi==2018.10.15
-cffi==1.11.5
 chardet==3.0.4
-Click==7.0
+clint==0.5.1
 colorama==0.4.0
-cookiecutter==1.6.0
-cookiejar==0.0.2
-cryptography==2.3.1
 decorator==4.3.0
-fabulous==0.3.0
-future==0.16.0
-ghost==0.6.1
-html5lib==1.0.1
+defusedxml==0.5.0
+entrypoints==0.2.3
 idna==2.7
+inquirer==2.5.1
 ipykernel==5.1.0
 ipython==7.0.1
 ipython-genutils==0.2.0
 jedi==0.13.1
 Jinja2==2.10
-jinja2-time==0.2.0
+jsonschema==2.6.0
 jupyter-client==5.2.3
 jupyter-core==4.4.0
+jupyterlab==0.35.2
+jupyterlab-server==0.2.0
 MarkupSafe==1.0
-pager==3.3
+mistune==0.8.4
+nbconvert==5.4.0
+nbformat==4.4.0
+notebook==5.7.0
+pandocfilters==1.4.2
 parso==0.3.1
 pickleshare==0.7.5
-poyo==0.4.2
-pprint==0.1
-prompt-toolkit==2.0.6
-pycparser==2.19
+prometheus-client==0.4.2
+prompt-toolkit==1.0.14
 Pygments==2.2.0
+PyInquirer==1.0.2
 python-dateutil==2.7.3
+pywinpty==0.5.4
 pyzmq==17.1.2
+readchar==2.0.1
+regex==2018.8.29
 requests==2.20.0
 selenium==3.14.1
+Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
-tinydb==3.11.1
+terminado==0.8.1
+testpath==0.4.2
 tornado==5.1.1
 traitlets==4.3.2
 urllib3==1.24
+virtualenv==16.1.0
 wcwidth==0.1.7
 webencodings==0.5.1
-whichcraft==0.5.2
