--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.16.1
 args==0.1.0
 backcall==0.1.0
 beautifulsoup4==4.6.3
@@ -6,11 +7,14 @@ blessings==1.7
 bs4==0.0.1
 certifi==2018.10.15
 chardet==3.0.4
+chromedriver-binary==2.43.0
 clint==0.5.1
 colorama==0.4.0
+cycler==0.10.0
 decorator==4.3.0
 defusedxml==0.5.0
 entrypoints==0.2.3
+future==0.17.1
 idna==2.7
 inquirer==2.5.1
 ipykernel==5.1.0
@@ -23,24 +27,37 @@ jupyter-client==5.2.3
 jupyter-core==4.4.0
 jupyterlab==0.35.2
 jupyterlab-server==0.2.0
+kiwisolver==1.0.1
+macholib==1.11
 MarkupSafe==1.0
+matplotlib==3.0.2
 mistune==0.8.4
 nbconvert==5.4.0
 nbformat==4.4.0
 notebook==5.7.0
+numpy==1.15.4
+pandas==0.23.4
 pandocfilters==1.4.2
 parso==0.3.1
+pefile==2018.8.8
 pickleshare==0.7.5
 prometheus-client==0.4.2
 prompt-toolkit==1.0.14
 Pygments==2.2.0
 PyInquirer==1.0.2
+PyInstaller==3.4
+pyparsing==2.3.0
 python-dateutil==2.7.3
+pytz==2018.7
+pywin32==224
+pywin32-ctypes==0.2.0
 pywinpty==0.5.4
 pyzmq==17.1.2
 readchar==2.0.1
 regex==2018.8.29
 requests==2.20.0
+scipy==1.1.0
+seaborn==0.9.0
 selenium==3.14.1
 Send2Trash==1.5.0
 simplegeneric==0.8.1
