--- a/requirements.txt
+++ b/requirements.txt
@@ -8,18 +8,26 @@ bs4==0.0.1
 certifi==2018.10.15
 chardet==3.0.4
 chromedriver-binary==2.43.0
+Click==7.0
 clint==0.5.1
 colorama==0.4.0
 cycler==0.10.0
 decorator==4.3.0
 defusedxml==0.5.0
 entrypoints==0.2.3
+et-xmlfile==1.0.1
+Faker==1.0.0
+Flask==1.0.2
+furl==2.0.0
 future==0.17.1
+iata-codes==0.0.5
 idna==2.7
 inquirer==2.5.1
 ipykernel==5.1.0
 ipython==7.0.1
 ipython-genutils==0.2.0
+itsdangerous==1.1.0
+jdcal==1.4
 jedi==0.13.1
 Jinja2==2.10
 jsonschema==2.6.0
@@ -36,15 +44,19 @@ nbconvert==5.4.0
 nbformat==4.4.0
 notebook==5.7.0
 numpy==1.15.4
+openpyxl==2.5.12
+orderedmultidict==1.0
 pandas==0.23.4
 pandocfilters==1.4.2
+parsing==1.6.0
 parso==0.3.1
 pefile==2018.8.8
 pickleshare==0.7.5
 prometheus-client==0.4.2
 prompt-toolkit==1.0.14
+pyairports==2.1.1
 Pygments==2.2.0
-PyInquirer==1.0.2
+PyInquirer==1.0.3
 PyInstaller==3.4
 pyparsing==2.3.0
 python-dateutil==2.7.3
@@ -64,9 +76,11 @@ simplegeneric==0.8.1
 six==1.11.0
 terminado==0.8.1
 testpath==0.4.2
+text-unidecode==1.2
 tornado==5.1.1
 traitlets==4.3.2
 urllib3==1.24
 virtualenv==16.1.0
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.14.1
